[gd_scene load_steps=10 format=2]

[ext_resource path="res://challenges/week4/gfx/map/background.jpg" type="Texture" id=1]
[ext_resource path="res://challenges/week4/scenes/card/card.tscn" type="PackedScene" id=2]
[ext_resource path="res://challenges/week4/scenes/main.gd" type="Script" id=3]
[ext_resource path="res://common/scenes/finishGame.tscn" type="PackedScene" id=4]
[ext_resource path="res://common/sfx/win/615099__mlaudio__magic-game-win-success.wav" type="AudioStream" id=5]
[ext_resource path="res://common/sfx/error/error.wav" type="AudioStream" id=6]
[ext_resource path="res://common/sfx/win/finish_521640__fupicat__winbanjo.ogg" type="AudioStream" id=7]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("cards:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "not_match_shake"
length = 0.22
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("cards:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -20, -15 ), Vector2( 17, 8 ), Vector2( -6.33333, 6.16667 ), Vector2( 0, 0 ) ]
}

[node name="main" type="Node"]
script = ExtResource( 3 )

[node name="background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 1 )

[node name="cards" type="Node2D" parent="."]

[node name="card1" parent="cards" groups=["cards"] instance=ExtResource( 2 )]
position = Vector2( 266, 106 )

[node name="card2" parent="cards" groups=["cards"] instance=ExtResource( 2 )]
position = Vector2( 431, 106 )

[node name="card3" parent="cards" groups=["cards"] instance=ExtResource( 2 )]
position = Vector2( 599, 106 )

[node name="card4" parent="cards" groups=["cards"] instance=ExtResource( 2 )]
position = Vector2( 771, 106 )

[node name="card5" parent="cards" groups=["cards"] instance=ExtResource( 2 )]
position = Vector2( 267, 234 )

[node name="card6" parent="cards" groups=["cards"] instance=ExtResource( 2 )]
position = Vector2( 435, 234 )

[node name="card7" parent="cards" groups=["cards"] instance=ExtResource( 2 )]
position = Vector2( 599, 234 )

[node name="card8" parent="cards" groups=["cards"] instance=ExtResource( 2 )]
position = Vector2( 771, 234 )

[node name="card9" parent="cards" groups=["cards"] instance=ExtResource( 2 )]
position = Vector2( 266, 363 )

[node name="card10" parent="cards" groups=["cards"] instance=ExtResource( 2 )]
position = Vector2( 435, 363 )

[node name="card11" parent="cards" groups=["cards"] instance=ExtResource( 2 )]
position = Vector2( 599, 363 )

[node name="card12" parent="cards" groups=["cards"] instance=ExtResource( 2 )]
position = Vector2( 771, 363 )

[node name="card13" parent="cards" groups=["cards"] instance=ExtResource( 2 )]
position = Vector2( 267, 492 )

[node name="card14" parent="cards" groups=["cards"] instance=ExtResource( 2 )]
position = Vector2( 435, 492 )

[node name="card15" parent="cards" groups=["cards"] instance=ExtResource( 2 )]
position = Vector2( 599, 492 )

[node name="card16" parent="cards" groups=["cards"] instance=ExtResource( 2 )]
position = Vector2( 771, 492 )

[node name="ShowAllCardsTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="StartGameTimer" type="Timer" parent="."]
one_shot = true

[node name="SecondClickFail" type="Timer" parent="."]
one_shot = true

[node name="finishGame" parent="." instance=ExtResource( 4 )]
visible = false

[node name="FinishGameSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="NotMatchSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -9.0

[node name="MatchSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/not_match_shake = SubResource( 2 )

[connection signal="clicked" from="cards/card1" to="." method="_on_card_clicked"]
[connection signal="clicked" from="cards/card2" to="." method="_on_card_clicked"]
[connection signal="clicked" from="cards/card3" to="." method="_on_card_clicked"]
[connection signal="clicked" from="cards/card4" to="." method="_on_card_clicked"]
[connection signal="clicked" from="cards/card5" to="." method="_on_card_clicked"]
[connection signal="clicked" from="cards/card6" to="." method="_on_card_clicked"]
[connection signal="clicked" from="cards/card7" to="." method="_on_card_clicked"]
[connection signal="clicked" from="cards/card8" to="." method="_on_card_clicked"]
[connection signal="clicked" from="cards/card9" to="." method="_on_card_clicked"]
[connection signal="clicked" from="cards/card10" to="." method="_on_card_clicked"]
[connection signal="clicked" from="cards/card11" to="." method="_on_card_clicked"]
[connection signal="clicked" from="cards/card12" to="." method="_on_card_clicked"]
[connection signal="clicked" from="cards/card13" to="." method="_on_card_clicked"]
[connection signal="clicked" from="cards/card14" to="." method="_on_card_clicked"]
[connection signal="clicked" from="cards/card15" to="." method="_on_card_clicked"]
[connection signal="clicked" from="cards/card16" to="." method="_on_card_clicked"]
[connection signal="timeout" from="ShowAllCardsTimer" to="." method="_on_ShowAllCardsTimer_timeout"]
[connection signal="timeout" from="StartGameTimer" to="." method="_on_StartGameTimer_timeout"]
[connection signal="timeout" from="SecondClickFail" to="." method="_on_SecondClickFail_timeout"]
